<resources>
    <string name="app_name">TestApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_pass_code">PassCodeActivity</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="confirm_password_not_match">Confirm password not match</string>
    <string name="login_fail">Email or password not match</string>

    <string name="text_pass_code_wrong">Invalid passcode, please try again</string>
    <string name="text_change_email_current">Current email</string>
    <string name="text_change_email_new">New email</string>
    <string name="text_change_email_confirm">Confirm email</string>
    <string name="text_edit_text_empty">Fields are not empty</string>
    <string name="text_confirm_email_fail">Confirm email not match</string>
    <string name="text_confirm_password_fail">Confirm password not match</string>
    <string name="text_change_email_success">Update email successful</string>
    <string name="text_change_password_success">Update password successful</string>
    <string name="text_password_wrong">Wrong password</string>

    <string name="text_font_size">Text size:</string>
    <string name="text_font_size_small">Small</string>
    <string name="text_font_size_normal">Normal</string>
    <string name="text_font_size_large">Large</string>
    <string name="text_font_name">Font:</string>
    <string name="text_font_color">Text color:</string>
    <string name="text_font_type">Android font</string>
    <string name="text_font_color_red">Red</string>
    <string name="text_font_color_blue">Blue</string>
    <string name="text_font_color_pink">Pink</string>
    <string name="text_font_color_custom">Custom</string>

    <string name="text_feedback_msg">Please give me feedback to good app</string>
    <string name="text_feedback_send">Send</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
