<ScrollView
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/layout_setting_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_change_email_current"/>
        <TextView
            android:id="@+id/tv_change_email_current"
            android:layout_marginTop="@dimen/tv_default_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/tv_default_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/et_change_email_password"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/et_default_margin_top"
            android:singleLine="true"
            android:padding="@dimen/et_default_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_default_margin_top"
            android:text="@string/text_change_email_new"/>
        <EditText
            android:id="@+id/et_change_email_new"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_default_padding"
            android:singleLine="true"
            android:layout_marginTop="@dimen/et_default_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"/>
        <TextView
            android:layout_marginTop="@dimen/tv_default_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_change_email_confirm"/>
        <EditText
            android:id="@+id/et_change_email_confirm"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_default_padding"
            android:singleLine="true"
            android:layout_marginTop="@dimen/et_default_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"/>

        <TextView
            android:id="@+id/tv_change_email_status"
            android:layout_marginTop="@dimen/tv_default_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:layout_marginTop="@dimen/btn_default_margin_top"
            android:id="@+id/btn_change_email"
            android:layout_width="@dimen/btn_default_width"
            android:layout_height="@dimen/btn_default_height"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>

